third_party/move/move-compiler-v2/tests/ability-check/bug_14223_unused_non_droppable_no_abort.move
module 0xCAFE::Module0 {
    struct S {}

    public fun f() {
        let _x = S {};
        //abort 1;
        //let S {} = _x;
    }
}
